k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: lmwprac
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: lmwcode/fitness_locator-api:V1.0.0
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /api/
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 120
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /api/
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 120
          failureThreshold: 3
