k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: lmwprac
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
